# sopel-emotes

./: NEWS  README.md  pyproject.toml
.github/workflows/: trusted-publishing.yml
sopel_emotes/: plugin.py
