[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_emotes", "sopel_emotes.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.md", "NEWS"], content-type="text/markdown" }

[project]
name = "sopel-emotes"
version = "1.0.1"
description = "Searches for emotes, denoted by `:emote_name:` from multiple sources (FFZ/BTTV/7TV) and links the associated image urls."

authors = [
  { name="Scott Adie", email="sopel-emotes@adie.io" },
]

license = { text="EFL-2.0" }
dynamic = ["readme"]

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: Eiffel Forum License (EFL)",
  "License :: OSI Approved :: Eiffel Forum License",
  "Topic :: Communications :: Chat :: Internet Relay Chat",
]
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
  "twitch",
  "emotes",
  "7TV",
  "BTTV",
  "FFZ",
  "FrankerFaceZ"
]

requires-python = ">=3.8, <4"
dependencies = [
  "sopel>=8.0", "requests"
]

[project.urls]
"Homepage" = "https://github.com/sc0tt/sopel-emotes"
"Bug Tracker" = "https://github.com/sc0tt/sopel-emotes/issues"

[project.entry-points."sopel.plugins"]
"emotes" = "sopel_emotes.plugin"
